Added album names to search results

--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,9 @@
       database update). Only two results on load (placeholders, will be fixed
       with next database update). Too much space between EMHX and divider (Don't
       have any idea why that happens lol). Missing information like note count,
-      hash, album name (will implement when I find the time). Ugly colors (I
-      expected Clone Hero colors to be more suitable... Will be fixed when I
-      find the time) For suggestions and reports:
+      hash (will implement when I find the time). Ugly colors (I expected Clone
+      Hero colors to be more suitable... Will be fixed when I find the time) For
+      suggestions and reports:
       <a
         class="text-blue-500"
         href="https://discord.com/users/263735224221827072"
@@ -331,8 +331,9 @@
             <div class="mb-2 grid grid-cols-7">
               <!-- Info About The Song -->
               <div class="col-span-5">
-                <span class="text-lg text-neutral-100">DragonForce</span><br />
-                <span class="text">Through The Fire and Flames</span>
+                <span class="text-lg">DragonForce</span><br />
+                <span class="text-xl">Through The Fire and Flames</span><br />
+                <span class="text-lg text-neutral-100">Some Album Name</span>
               </div>
               <!-- Instruments -->
               <div class="col-span-2 flex flex-row-reverse gap-1">
