--- a/www/index.html
+++ b/www/index.html
@@ -19,10 +19,10 @@
       registered as strings so they are not sortable, will be fixed with next
       database update). Only two results on load (placeholders, will be fixed
       with next database update). Too much space between EMHX and divider (Don't
-      have any idea why that happens lol). Missing information like note count,
-      hash (will implement when I find the time). Ugly colors (I expected Clone
-      Hero colors to be more suitable... Will be fixed when I find the time) For
-      suggestions and reports:
+      have any idea why that happens lol). Missing information like hash
+      information (will implement when I find the time). Ugly colors (I expected
+      Clone Hero colors to be more suitable... Will be fixed when I find the
+      time) For suggestions and reports:
       <a
         class="text-blue-500"
         href="https://discord.com/users/263735224221827072"
