Set instrument icon heights (h/max-h) longer.

--- a/www/index.html
+++ b/www/index.html
@@ -339,14 +339,14 @@
               <!-- Instruments -->
               <div class="col-span-2 flex flex-row-reverse gap-1">
                 <div class="tooltip col-span-1 text-center">
-                  <img class="mx-auto max-h-10" src="img/guitar.png" />
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
                   <span class="text-sm" href="">EMHX</span>
                   <span class="tooltiptext bg-gray-700 text-sm"
-                    >Tooltip texttttttttttttttttt<br />Test</span
+                    >Tooltip Text<br />Test</span
                   >
                 </div>
                 <div class="tooltip col-span-1 text-center">
-                  <img class="mx-auto h-10 max-h-10 w-10" src="img/drums.svg" />
+                  <img class="mx-auto h-12 max-h-12 w-12" src="img/drums.svg" />
                   <span class="text-sm" href="">EMHX</span>
                 </div>
               </div>
