Add placeholders and shimmer effect.

--- a/www/index.html
+++ b/www/index.html
@@ -332,12 +332,18 @@
             <div class="mb-2 grid grid-cols-7">
               <!-- Info About The Song -->
               <div class="col-span-5">
-                <span class="text-lg">DragonForce</span><br />
-                <span class="text-xl">Through The Fire and Flames</span><br />
-                <span class="text-lg text-neutral-100">Some Album Name</span>
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
               </div>
               <!-- Instruments -->
-              <div class="col-span-2 flex flex-row-reverse gap-1">
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
                 <div class="tooltip col-span-1 text-center">
                   <img class="mx-auto max-h-12" src="img/guitar.png" />
                   <span class="text-sm" href="">EMHX</span>
@@ -346,35 +352,292 @@
                   >
                 </div>
                 <div class="tooltip col-span-1 text-center">
-                  <img class="mx-auto h-12 max-h-12 w-12" src="img/drums.svg" />
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
                   <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
                 </div>
               </div>
             </div>
             <div class="mt-1 flex-grow border-t border-gray-200"></div>
-            <span class="text"
-              ><a
-                class="underline underline-offset-[1.5px] hover:text-violet-200"
-                onclick="updateClicks()"
-                href="#"
-                >Download X's Chart</a
-              >
-              <small>(31)</small></span
-            >
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
           </div>
+          <!-- ENTRY -->
           <div class="rounded-lg bg-[#4e279e] px-5 py-3">
-            <span class="text-lg text-neutral-100">DragonForce</span><br />
-            <span class="text">Through The Fire and Flames</span>
+            <div class="mb-2 grid grid-cols-7">
+              <!-- Info About The Song -->
+              <div class="col-span-5">
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+              </div>
+              <!-- Instruments -->
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+              </div>
+            </div>
             <div class="mt-1 flex-grow border-t border-gray-200"></div>
-            <span class="text"
-              ><a
-                class="underline underline-offset-[1.5px] hover:text-violet-200"
-                onclick="updateClicks()"
-                href="#"
-                >Download X's Chart</a
-              >
-              <small>(31)</small></span
-            >
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
+          </div>
+          <!-- ENTRY -->
+          <div class="rounded-lg bg-[#4e279e] px-5 py-3">
+            <div class="mb-2 grid grid-cols-7">
+              <!-- Info About The Song -->
+              <div class="col-span-5">
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+              </div>
+              <!-- Instruments -->
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mt-1 flex-grow border-t border-gray-200"></div>
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
+          </div>
+          <!-- ENTRY -->
+          <div class="rounded-lg bg-[#4e279e] px-5 py-3">
+            <div class="mb-2 grid grid-cols-7">
+              <!-- Info About The Song -->
+              <div class="col-span-5">
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+              </div>
+              <!-- Instruments -->
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mt-1 flex-grow border-t border-gray-200"></div>
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
+          </div>
+          <!-- ENTRY -->
+          <div class="rounded-lg bg-[#4e279e] px-5 py-3">
+            <div class="mb-2 grid grid-cols-7">
+              <!-- Info About The Song -->
+              <div class="col-span-5">
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+              </div>
+              <!-- Instruments -->
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mt-1 flex-grow border-t border-gray-200"></div>
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
+          </div>
+          <!-- ENTRY -->
+          <div class="rounded-lg bg-[#4e279e] px-5 py-3">
+            <div class="mb-2 grid grid-cols-7">
+              <!-- Info About The Song -->
+              <div class="col-span-5">
+                <p
+                  class="mb-3 h-3 w-1/3 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-3/4 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+                <p
+                  class="mb-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+                ></p>
+              </div>
+              <!-- Instruments -->
+              <div class="col-span-2 flex animate-pulse flex-row-reverse gap-1">
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/guitar.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/drums.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/bass.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+                <div class="tooltip col-span-1 text-center">
+                  <img class="mx-auto max-h-12" src="img/keys.png" />
+                  <span class="text-sm" href="">EMHX</span>
+                  <span class="tooltiptext bg-gray-700 text-sm"
+                    >Tooltip Text<br />Test</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="mt-1 flex-grow border-t border-gray-200"></div>
+            <p
+              class="mt-3 h-3 w-1/2 animate-pulse bg-gray-400 leading-relaxed"
+            ></p>
           </div>
         </div>
         <div class="my-5">
@@ -405,4 +668,8 @@
       </div>
     </main>
   </body>
+  <script>
+    //Perform search on page load (top 50, default search)
+    search();
+  </script>
 </html>
